fix: fix modal z-index on delete

--- a/components/TaskTableItem.module.scss
+++ b/components/TaskTableItem.module.scss
@@ -6,20 +6,22 @@
   text-align: left;
   border-spacing: 0;
   thead {
-    position: sticky;
-    z-index: 1;
-    top: 0;
-  }
-  thead th {
-    padding: 0.5rem;
-    background-color: rgba(#e1efe9, 0.85);
-    backdrop-filter: blur(6px) saturate(180%);
-    border: 1px solid lighten($clr-muted, 80%);
-    border-left: none;
-    border-right: none;
-    @include font-size($bodyS-font-sizes);
-    &:first-child {
-      width: 40%;
+    tr {
+      position: sticky;
+      z-index: 1;
+      top: 0;
+    }
+    th {
+      padding: 0.5rem;
+      background-color: rgba(#e1efe9, 0.85);
+      backdrop-filter: blur(6px) saturate(180%);
+      border: 1px solid lighten($clr-muted, 80%);
+      border-left: none;
+      border-right: none;
+      @include font-size($bodyS-font-sizes);
+      &:first-child {
+        width: 40%;
+      }
     }
   }
 }
